deployment-kubernetes/product-service/service.yaml
# ============================================
# Shopease: product-service service
# Author: Sanket Mule
# ============================================

apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopease-webapp-development

spec:
  selector:
    app: product-service-deployment
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 8081
  type: ClusterIP
